--- a/public/omni.css
+++ b/public/omni.css
@@ -1,9 +1,4 @@
 /*html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}*/
-#board {
-  width: 400px;
-  margin-left: auto;
-  margin-right: auto; }
-
 #login {
   max-width: 400px; }
   #login .form-group {
@@ -55,9 +50,33 @@
   -moz-box-shadow: 0 0 3px 3px blue inset ;
   box-shadow: 0 0 3px 3px blue inset ; }
 
+#board {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto; }
+
 .stat-title {
   font-weight: bold; }
 
 .username {
   color: green;
   font-size: 12pt; }
+
+/* http://stackoverflow.com/questions/15982233/spinner-for-twitter-bootstrap-btn */
+.spinner {
+  display: inline-block;
+  opacity: 0;
+  max-width: 0;
+  -webkit-transition: opacity 0.25s, max-width 0.45s;
+  -moz-transition: opacity 0.25s, max-width 0.45s;
+  -o-transition: opacity 0.25s, max-width 0.45s;
+  transition: opacity 0.25s, max-width 0.45s;
+  /* Duration fixed since we animate additional hidden width */ }
+
+.has-spinner.active {
+  cursor: progress; }
+
+.has-spinner.active .spinner {
+  opacity: 1;
+  max-width: 50px;
+  /* More than it will ever come, notice that this affects on animation duration */ }
