--- a/public/css/omni.scss
+++ b/public/css/omni.scss
@@ -3,7 +3,17 @@
 
 #board {
     width: 400px;
-    @include center;
+    // @include center;
+}
+
+.joingame {
+  float: right;
+}
+
+.mycontainer {
+  padding-top: 20px;
+  // width: 500px;
+  @include center;
 }
 
 .stat-title {
