--- a/public/omni.css
+++ b/public/omni.css
@@ -1,12 +1,4 @@
 /*html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}*/
-#login {
-  max-width: 400px; }
-  #login .form-group {
-    width: 80%; }
-
-#loginButton {
-  flat: right; }
-
 #log_container {
   width: 300px;
   border: 1px solid #000;
@@ -40,6 +32,9 @@
        -moz-box-sizing: border-box;
             box-sizing: border-box;
 }*/
+#userInfo {
+  height: 50px; }
+
 .opp-highlight-white {
   -webkit-box-shadow: 0 0 3px 3px yellow inset ;
   -moz-box-shadow: 0 0 3px 3px yellow inset ;
@@ -51,7 +46,13 @@
   box-shadow: 0 0 3px 3px blue inset ; }
 
 #board {
-  width: 400px;
+  width: 400px; }
+
+.joingame {
+  float: right; }
+
+.mycontainer {
+  padding-top: 20px;
   margin-left: auto;
   margin-right: auto; }
 
