cleaned up ui, re-added online list

--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -51,9 +51,10 @@
 }*/
 
 #userInfo {
+    float: left;
     // display: none;
     // background-color: #aaa;
-    height: 50px;
-    // padding: 10px;
+    // height: 50px;
+    padding: 10px;
     // border-radius: 5px;
 }
