--- a/public/omni.css
+++ b/public/omni.css
@@ -33,7 +33,8 @@
             box-sizing: border-box;
 }*/
 #userInfo {
-  height: 50px; }
+  float: left;
+  padding: 10px; }
 
 .opp-highlight-white {
   -webkit-box-shadow: 0 0 3px 3px yellow inset ;
@@ -46,15 +47,12 @@
   box-shadow: 0 0 3px 3px blue inset ; }
 
 #board {
-  width: 400px; }
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto; }
 
 .joingame {
   float: right; }
-
-.mycontainer {
-  padding-top: 20px;
-  margin-left: auto;
-  margin-right: auto; }
 
 .stat-title {
   font-weight: bold; }
