added cancel button

--- a/public/css/topbar.scss
+++ b/public/css/topbar.scss
@@ -20,6 +20,11 @@
     font-size: 12pt;
 }
 
+.start {
+  float: right;
+  margin-left: 10px;
+}
+
 /* http://stackoverflow.com/questions/15982233/spinner-for-twitter-bootstrap-btn */
 .spinner {
   display: inline-block;
