--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -27,3 +27,12 @@
 .mytime {
   font-weight: bold;
 }
+
+#your_turn {
+	font-size: 24px;
+	visibility: hidden;
+}
+
+body.myTurn #your_turn {
+	visibility: visible;
+}
