--- a/public/libs/chessboardjs/css/chessboard-0.3.0.css
+++ b/public/libs/chessboardjs/css/chessboard-0.3.0.css
@@ -15,7 +15,8 @@
 
 /* board */
 .board-b72b1 {
-  border: 2px solid #404040;
+  margin-left: auto;
+  margin-right: auto;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
